# neatshift

./: .gitignore  AGENTS.md  LICENSE  NUEVAS_CARACTERISTICAS.md  PLATFORM_DIRECTORIES.md  README.md  build.py  config-example.json  flake.nix  pyproject.toml  shell.nix  show_config_paths.py  test_app.sh  verificar_cambios.sh
.github/workflows/: build.yml
src/: __init__.py  main.py
src/config/: __init__.py  settings.py  theme.py  user_config.py
src/domain/: __init__.py  categorizer.py  configurable_categorizer.py  file_item.py
src/services/: __init__.py  file_service.py  organization_service.py  performance_optimizer.py  windows_file_service.py
src/ui/: __init__.py  file_organizer_view.py  settings_view.py  tabbed_view.py
